# PyRag

./: .gitignore  .pre-commit-config.yaml  DOCKER_README.md  Dockerfile.dev  README.md  debug_chromadb.py  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  requirements.txt  resume_fastapi_storage.py  server.py  start_pyrag.sh
.cursor/rules/: problem-solving.mdc  professional-standards.mdc  python-standards.mdc  question-initial-solution.mdc  system-design-standards.mdc
chroma_db/: chroma.sqlite3
config/: jetson_nano_config.py  libraries.json
docs/: DOCUMENTATION.md  data-ingestion-pipeline-overview.md  implementation_guide.md  implementation_plan.md  jetson_nano_deployment.md  mcp_setup_guide.md  phase0_completion_summary.md  phase1_completion_summary.md  phase2_completion_summary.md  phase3_completion_summary.md  phase3_implementation_plan.md  qodo_embedding_upgrade.md  rag-pipeline-overview.md  rag_evaluation_guide.md  rag_improvement_plan.md  secure_client_setup.md
scripts/: automated_library_ingestion.py  check_current_state.py  debug_firecrawl.py  debug_firecrawl_content.py  debug_link_extraction.py  deploy_jetson_nano.sh  run_mcp_server.py  setup-dev.sh  setup_qodo_embeddings.py  test_complete_system.py  test_enhanced_integration.py  test_enhanced_processing.py  test_firecrawl_api.py  test_firecrawl_docs.py  test_firecrawl_rag.py  test_ingestion.py  test_llm_crawling.py  test_mcp_client.py  test_mcp_quality_assessment.py  test_mcp_quality_assessment_simple.py  test_mcp_server.py  test_mcp_server_simple.py  test_mcp_tools_firecrawl.py  test_mcp_tools_pandas.py  test_pytorch_ingestion.py  test_qodo_embeddings.py  test_rag_evaluation.py  test_simple_extraction.py  test_smart_crawling.py  test_two_phase_ingestion.py
src/pyrag/: __init__.py  caching.py  cli.py  config.py  core.py  embeddings.py  intelligent_strategy.py  processing.py  relationship_manager.py  search.py  vector_store.py
src/pyrag/api/: __init__.py  main.py
src/pyrag/api/routers/: __init__.py  libraries.py  search.py
src/pyrag/database/: __init__.py  connection.py  session.py
src/pyrag/enhanced_processing/: __init__.py  content_processor.py  enhanced_processor.py  metadata_extractor.py  semantic_chunker.py  utils.py
src/pyrag/evaluation/: __init__.py  evaluator.py  judge.py  metrics.py  reporting.py  test_suite.py
src/pyrag/graph/: __init__.py  graph_db.py  knowledge_graph.py  query_planner.py  reasoning_engine.py  relationship_extractor.py
src/pyrag/ingestion/: __init__.py  crawl4ai_client.py  crawler.py  document_chunk.py  document_processor.py  document_structure_analyzer.py  documentation_manager.py  documentation_processor.py  enhanced_documentation_processor.py  firecrawl_client.py  ingestion_pipeline.py  intelligent_crawler.py  metadata_sanitizer.py  metadata_schema.py  site_crawler.py  sitemap_analyzer.py  structure_mapper.py
src/pyrag/libraries/: __init__.py  compliance.py  discovery.py  manager.py  quality_assessment.py  update_pipeline.py
src/pyrag/llm/: client.py
src/pyrag/logging/: __init__.py  setup.py  streaming.py
src/pyrag/mcp/: __init__.py  server.py  streaming.py
src/pyrag/models/: __init__.py  analytics.py  base.py  compliance.py  document.py  library.py
src/pyrag/monitoring/: __init__.py  alerting.py  dashboard.py  grafana.py  health.py  logging.py  monitor.py  prometheus.py  tracing.py
src/pyrag/scaling/: __init__.py  auto_scaler.py  cache_manager.py  health_checker.py  load_balancer.py  metrics.py  query_optimizer.py
src/pyrag/search/: __init__.py  engine.py  multi_dimensional.py  strategy.py  topic_coverage.py
src/pyrag/storage/: __init__.py  embeddings.py  vector_store.py
tests/: __init__.py  conftest.py  conftest_mcp.py  test_core.py  test_ingestion.py  test_phase2.py  test_phase3.py  test_phase3_simple.py
tests/utils/: mcp_test_utils.py
tools/: README.md  check_libraries.py
tools/pipeline/: automated_library_ingestion.py
